--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,7 @@ header {
     display: flex;
     flex-direction: column;
     margin: 10px 50px;
-    height: 50rem;
-    min-height: fit-content;
+    height: fit-content;
 }
 
 .first-div-title {
@@ -394,25 +393,92 @@ span {
 
 /* ---------------------------- */
 
+/* Eightth div content */
+
 .eightth-div {
     background-color: #314028;
-    height: 50rem;
+    height: 10rem;
     min-height: fit-content;
 }
 
+/* ---------------------------- */
+
+/* ninth div content */
+
 .ninth-div {
     background-color: #9b4819;
-    height: 50rem;
+    height: fit-content;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
 }
-/* .interior {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    opacity: 1;
-} */
+
+.last-field {
+    /* grid-row: span 2; */
+    height: fit-content;
+    width: 75%;
+    margin: 10%;
+}
+.last-field > h1 {
+    font-size: 48px;
+    color: #f4f1e8;
+}
+.last-field > hr {
+    margin-right: 20%;
+    border: 3px solid #cf7039;
+    border-radius: 10px;
+}
+.last-field > h2 {
+    font-size: 18px;
+    color: #f4f1e8;
+}
+
+a {
+    text-decoration: none;
+    color: #411e0a;
+    font-weight: 900;
+    font-size: 20px;
+}
+
+.contacts {
+    grid-column-start: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: center;
+    margin: 10%;
+}
+
+.email {
+    display: flex;
+}
+
+.phone {
+    display: flex;
+}
+.svg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 20px;
+}
+svg {
+    width: 50px;
+    height: 50px;
+    fill: #f4f1e8;
+}
+
+.details > h2 {
+    color: #f4f1e8;
+    font-size: 18;
+}
+
+span.carlito-regular {
+    color: #f4f1e8;
+}
+
+/* --------------------------- */
 
 hr.solid {
     border-top: 2px solid #000000;
@@ -459,7 +525,7 @@ hr.solid {
   
 /* TO HERE */
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
     .third-div {
         height: fit-content;
         grid-template-columns: 1fr;
@@ -516,6 +582,16 @@ hr.solid {
         display: flex;
         flex-direction: column;
         gap: 20px;
+    }
+
+    .last-field {
+        grid-column: span 2;
+    }
+
+    .contacts {
+        grid-column: span 2;
+        align-content: flex-start;
+        margin: 10%;
     }
 
 }
