--- a/styles.css
+++ b/styles.css
@@ -188,7 +188,7 @@ span {
     grid-row: span 2;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 .certification > img {
@@ -229,6 +229,10 @@ span {
     display: flex;
     justify-content: center;
     align-items: flex-end;
+}
+
+.p-focus {
+    text-align: center;
 }
 
 .field {
@@ -285,7 +289,8 @@ span {
 }
 
 .sixth-div > .certification > img {
-    height: 200px;
+    height: 75%;
+    width: 75%;
     border-radius: 10px;
 }
 
@@ -311,7 +316,8 @@ span {
 }
 
 .seventh-div > .certification > img {
-    height: 200px;
+    height: 75%;
+    width: 75%;
     border-radius: 10px;
 }
 
@@ -476,7 +482,7 @@ hr.solid {
         grid-column: span 3;
     }
 
-    .fifth-div {
+    /* .fifth-div {
         height: fit-content;
     }
 
@@ -492,7 +498,7 @@ hr.solid {
     .field > img {
         height: 200px;
         border-radius: 10px;
-    }
+    } */
 
     .sixth-div {
         height: fit-content;
